# Math-julia

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mjl
include/: globals.hpp  transpilate.hpp
src/: main.cc  traspilate.cc
test/: config.json  fStr.jl  fStr.mjl  full_test.jl  full_test.mjl  input.jl  input.mjl  no-strict.jl  no-strict.mjl  printf.jl  printf.mjl  test1.jl  test1.mjl  test2.jl  test3.jl  test3.mjl  to_bool.jl  to_bool.mjl  types.jl  types.mjl
